about us section

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
 * {
   margin: 0px;
   padding: 0px;
@@ -7,13 +9,21 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  background: #101010;
+  color: #fff;
+  /* font-family: 'Open Sans', sans-serif; */
+  font-family: Dosis,sans-serif;
+}
+
 /* header css  */
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  /* padding: 20px; */
+  padding: 20px 54px 20px 54px;
   background-color: #f1f1f1;
 }
 
@@ -23,6 +33,15 @@ html {
   text-decoration: none;
   color: #333;
 }
+
+.header__logo h2 {
+  text-shadow: -1px -1px 0 #f1b722,
+    1px -1px 0 #f1b722,
+    -1px 1px 0 #f1b722,
+    1px 1px 0 #f1b722;
+  background: transparent;
+}
+
 
 .header__nav ul {
   list-style: none;
@@ -47,25 +66,370 @@ html {
 
 .header__toggle {
   display: none;
-  background-color: transparent;
   border: none;
   cursor: pointer;
-  width: 40px;
-  height: 40px;
-  position: relative;
 }
 
 .header__toggle-icon {
   display: block;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 20px;
-  height: 2px;
-  background-color: #333;
+  top: 34px;
+  right: 6px;
+  /* transform: t
+  /* background-color: #333; */
 }
 
+.hamburger-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 20px;
+  width: 30px;
+  cursor: pointer;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.hamburger-menu-line {
+  height: 2px;
+  background-color: #333;
+  width: 100%;
+}
+
+.header__nav ul li a.active {
+  border: 1px solid black;
+}
+
+/* Banner css */
+
+.banner-wrapper {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1245px;
+  margin: 70px auto 82px auto;
+  align-items: center;
+}
+
+.banner-left-section {
+  width: 50%;
+}
+
+.banner-left-section h2 {
+  font-size: 65px;
+  text-transform: capitalize;
+  margin: 0px 0px 0px 0px;
+  /* color: white; */
+}
+
+.banner-left-section p {
+  font-size: 15px;
+  /* color: white; */
+  max-width: 456px;
+  line-height: 25px;
+  margin: 26px 0px 35px 0px;
+}
+
+.banner-left-btn {
+  max-width: 140px;
+  text-align: center;
+  padding: 15px 32px;
+  color: white;
+  border-radius: 30px;
+  font-size: 17px;
+  background: #f1b722;
+}
+
+.banner-left-btn a {
+  color: white;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.banner-right-section {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  animation: image 2.5s infinite;
+  position: relative;
+}
+
+.banner-right-section::after {
+  content: "";
+  position: absolute;
+  bottom: -10%;
+  left: 0%;
+  right: 0%;
+  margin: 0%;
+  margin: auto;
+  background-color: #00000066;
+  width: 428px;
+  height: 24px;
+  filter: blur(9px);
+  border-radius: 100%;
+  animation: backgroundimage 3.1s infinite;
+  animation-duration: 2.5s;
+}
+
+@keyframes image {
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(20px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes backgroundimage {
+  0% {
+    width: 300px;
+    transform: translateY(0px);
+  }
+
+  50% {
+    width: 428px;
+    transform: translateY(10px);
+  }
+
+  100% {
+    width: 300px;
+    transform: translateY(0px);
+  }
+}
+
+.banner-right-section img {
+  width: 702px;
+}
+
+/* about us css */
+
+.about-us-section {
+  /* background-color: #f8f8f8; */
+  padding: 70px 0;
+}
+
+.about-us-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1245px;
+  margin: 0 auto;
+}
+
+.about-us-left-section {
+  flex-basis: 45%;
+  padding-right: 30px;
+  margin-bottom: 30px;
+}
+
+.about-us-right-section {
+  flex-basis: 45%;
+}
+
+.about-us-left-section h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.about-us-left-section p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+
+.about-us-left-section ul {
+  list-style: disc;
+  margin-left: 20px;
+}
+
+.about-us-left-section li {
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
+.about-us-right-section img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* what we i do  */
+.what-i-do-wrapper {
+  padding: 70px 0px;
+}
+
+.what-i-do-wrapper h2 {
+  font-size: 40px;
+  text-align: center;
+}
+
+.what-i-do-folder {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 28px;
+  justify-content: center;
+  margin: 70px auto 0;
+  max-width: 1245px;
+}
+
+.what-i-do-image {
+  width: 197px;
+}
+
+.what-i-do-image img {
+  width: 100%;
+}
+
+/* Contact us css  */
+section#contact {
+  padding: 70px 0px;
+}
+
+.section-title {
+  text-align: center;
+  padding: 30px 0;
+  position: relative;
+}
+
+.section-title span {
+  position: absolute;
+  top: 30px;
+  color: #eef0f2;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  font-weight: 700;
+  font-size: 52px;
+  text-transform: uppercase;
+  line-height: 0;
+}
+
+.section-title h2 {
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  padding-bottom: 0;
+  color: #3b434a;
+  position: relative;
+  z-index: 2;
+}
+
+.section-title p {
+  margin-bottom: 0;
+  position: relative;
+  z-index: 2;
+}
+
+.contact .info-box {
+  color: #444444;
+  text-align: center;
+  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+  padding: 20px 0 30px 0;
+}
+
+.contact .info-box i.bx {
+  font-size: 24px;
+  color: #ffb727;
+  border-radius: 50%;
+  padding: 15px;
+  background: #fff6e4;
+}
+
+.contact .info-box h3 {
+  font-size: 20px;
+  color: #777777;
+  font-weight: 700;
+  margin: 10px 0;
+}
+
+.contact .social-links {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+}
+
+.contact .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  color: #687683;
+  line-height: 1;
+  margin: 0 8px;
+  transition: 0.3s;
+  padding: 14px;
+  border-radius: 50px;
+  border: 1px solid #dde1e4;
+}
+
+.contact .info-box {
+  color: #444444;
+  text-align: center;
+  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+  padding: 20px 0 30px 0;
+  background: #fff;
+}
+
+.contact .info-box i.bx {
+  font-size: 24px;
+  color: #ffb727;
+  border-radius: 50%;
+  padding: 15px;
+  background: #fff6e4;
+}
+
+.info-box a {
+  color: #ffc85a;
+  text-decoration: dashed;
+}
+
+.contact .php-email-form {
+  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+
+  padding: 47px 27px;
+  background: #fff;
+}
+
+.contact .php-email-form input,
+.contact .php-email-form textarea {
+  border-radius: 0;
+  box-shadow: none;
+  font-size: 14px;
+}
+
+.contact .php-email-form input {
+  padding: 10px 15px;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.375rem;
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.contact .php-email-form button[type=submit] {
+  background: #ffb727;
+  border: 0;
+  padding: 10px 24px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 5px;
+}
 
 /* footer css */
 #footer {
@@ -99,7 +463,7 @@ html {
   position: relative;
   font-family: "Satisfy", serif;
   padding: 0;
-  margin: 0 0 15px 0;
+  margin: 0 0 25px 0;
 }
 
 #footer p {
@@ -142,11 +506,27 @@ html {
   font-size: 13px;
 }
 
+.fade-in {
+  animation: fade-in 2s ease-in-out forwards;
+  opacity: 0;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 /* Mobile responsive */
 @media screen and (max-width: 768px) {
   .header {
     flex-direction: column;
     align-items: flex-start;
+    position: relative;
   }
 
   .header__nav {
@@ -160,6 +540,8 @@ html {
 
   .header__nav ul {
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .header__nav li {
@@ -168,5 +550,96 @@ html {
 
   .header__toggle {
     display: block;
+  }
+
+  .about-us-wrapper {
+    flex-direction: column;
+  }
+
+  .about-us-left-section,
+  .about-us-right-section {
+    flex-basis: 100%;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 0;
+    text-align: justify;
+  }
+
+  .about-us-left-section {
+    padding-right: 0;
+    margin-bottom: 0;
+  }
+
+  .about-us-left-section h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+    text-align: center;
+    margin: 30px 0px;
+}
+  .about-us-left-section p {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
+  .about-us-left-section li {
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+
+  .banner-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1245px;
+    margin: 70px auto 82px auto;
+    align-items: center;
+  }
+
+  .banner-left-section {
+    width: 100%;
+    text-align: center;
+  }
+
+  .banner-left-section h2 {
+    font-size: 5vw;
+    text-transform: capitalize;
+    margin: 0;
+  }
+
+  .banner-left-section p {
+    font-size: 3vw;
+    max-width: 80%;
+    line-height: 1.5;
+    margin: 26px auto 35px auto;
+  }
+
+  .banner-left-btn {
+    margin: auto;
+    max-width: 100%;
+    width: 120px;
+    padding: 10px 0px;
+  }
+
+  .banner-left-btn a {
+    color: white;
+    text-decoration: none;
+    text-transform: capitalize;
+  }
+
+  .banner-right-section {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+
+
+  .banner-right-section img {
+    width: 100%;
+    max-width: 702px;
+  }
+
+  .banner-right-section:after {
+    content: none;
   }
 }
