--- a/src/index.css
+++ b/src/index.css
@@ -240,7 +240,7 @@ body {
   font-weight: 700;
   font-size: 45px;
   text-transform: uppercase;
-  line-height: 0;
+  /* line-height: 0; */
 }
 
 .about-us-left-section p {
@@ -276,8 +276,9 @@ body {
   color: #eef0f2;
   font-weight: 700;
   font-size: 45px;
+  margin-bottom: 35px;
   text-transform: uppercase;
-  line-height: 0;
+  /* line-height: 0; */
 }
 
 .what-i-do-folder {
@@ -290,12 +291,96 @@ body {
 }
 
 .what-i-do-image {
-  width: 197px;
+  text-align: center;
 }
 
 .what-i-do-image img {
-  width: 100%;
+  background: #f1f1f1;
+  border-radius: 15px;
+  margin: 40px 0;
+  padding: 20px;
+  height: 60%;
+  max-width: 100%;
+  width: 150px;
+  margin: auto;
 }
+
+/* Project css */
+
+#projects {
+  padding: 70px 0;
+}
+
+#projects h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #eef0f2;
+  font-weight: 700;
+  font-size: 45px;
+  text-transform: uppercase;
+  /* line-height: 0; */
+}
+
+
+#projects .box {
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  /* padding: 20px; */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.image-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#projects img {
+  max-width: 100%;
+  height: 150px;
+  border-radius: 4px;
+}
+
+#projects .det {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.col-lg-3 {
+  margin: 10px 0;
+}
+
+#projects h3 {
+  font-size: 20px;
+  color: #212529;
+}
+
+#projects .btn {
+  text-align: center;
+}
+
+#projects button {
+  background-color: #007bff;
+
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#projects button a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#projects button:hover {
+  background-color: #0056b3;
+}
+
 
 /* Contact us css  */
 section#contact {
@@ -313,7 +398,7 @@ section#contact {
   font-weight: 700;
   font-size: 45px;
   text-transform: uppercase;
-  line-height: 0;
+  /* line-height: 0; */
 }
 
 /* .section-title h2 {
@@ -467,7 +552,7 @@ section#contact {
 #footer h3 {
   font-size: 36px;
   font-weight: 700;
-  color: #fff;
+  color: #adb5bd;
   position: relative;
   font-family: "Satisfy", serif;
   padding: 0;
@@ -528,7 +613,13 @@ section#contact {
     opacity: 1;
   }
 }
+.slick-prev {
+  left: 0 !important;
+}
 
+.slick-next {
+  right: 0 !important;
+}
 /* Mobile responsive */
 @media screen and (max-width: 768px) {
   .header {
@@ -651,4 +742,6 @@ section#contact {
   .banner-right-section:after {
     content: none;
   }
+
+  
 }
