--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body {
 }
 
 .header__nav a {
-  font-size: 16px;
+  font-size: 20px;
   text-decoration: none;
   color: #333;
 }
@@ -74,7 +74,7 @@ body {
 .header__toggle-icon {
   display: block;
   position: absolute;
-  top: 25px;
+  top: 26px;
   right: 6px;
   /* transform: t
   /* background-color: #333; */
@@ -604,6 +604,21 @@ section#contact {
   opacity: 0;
 }
 
+.nav_new {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.social {
+  display: flex;
+  gap: 20px;
+}
+
+.social a {
+  font-size: 20px;
+}
+
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -613,6 +628,7 @@ section#contact {
     opacity: 1;
   }
 }
+
 .slick-prev {
   left: 0 !important;
 }
@@ -620,8 +636,23 @@ section#contact {
 .slick-next {
   right: 0 !important;
 }
+
 /* Mobile responsive */
 @media screen and (max-width: 768px) {
+  iframe {
+    height: 400px;
+  }
+
+  .social {
+    position: absolute;
+    right: 15%;
+    top: 20px;
+  }
+
+  .nav_new {
+    margin: auto;
+  }
+
   .header {
     flex-direction: column;
     align-items: flex-start;
@@ -743,5 +774,8 @@ section#contact {
     content: none;
   }
 
-  
+  .header {
+    padding: 20px 0px 17px 15px;
+  }
+
 }
